kubernetes/postgras.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
  namespace: spring-app
  labels:
    app: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: postgres
        image: postgres:latest
        ports:
        - containerPort: 5432
        resources:
          requests:
            memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: spring-app
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: db
