kubernetes/spring-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-app-deployment
  labels:
    app: spring-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-app
  template:
    metadata:
      labels:
        app: spring-app
    spec:
      containers:
      - name: spring-app
        image: arifislam/spring-app  # Replace with the path to your Spring Boot project
        ports:
        - containerPort: 4022
---
apiVersion: v1
kind: Service
metadata:
  name: spring-app-service
spec:
  type: NodePort
  ports:
  - port: 4022
    targetPort: 4022
    nodePort: 30082
  selector:
    app: spring-app
